--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/app.js",
+    "dev": "nodemon --watch src src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Luz Torres",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
+    "express": "^4.21.0",
+    "express-handlebars": "^8.0.1",
+    "nodemon": "^3.1.5",
+    "socket.io": "^4.8.0",
+    "sweetalert2": "^11.6.13",
     "uuid": "^10.0.0"
   },
-  "type":"module"
+  "devDependencies": {
+    "nodemon": "^3.1.5"
+  },
+  "type": "module"
 }
